@@ -76,7 +76,13 @@ function msgGrantUse($GRANT, $DATA, &$subject, &$body)
 {
   $subject = sprintf(T_("[dl] download link for grant %s"), grantStr($GRANT));
   $body = sprintf(T_("Your grant %s has been used by %s."
-	  . " The uploaded file is now available to be"
-	  . " downloaded at %s"),
-      grantStr($GRANT), $_SERVER["REMOTE_ADDR"], ticketUrl($DATA));
+	  . " The uploaded file is now available to be downloaded at:\n\n"),
+      grantStr($GRANT), $_SERVER["REMOTE_ADDR"]);
+  if(!isset($DATA['pass']))
+    $body .= ticketUrl($DATA);
+  else
+  {
+    $body .= T_("URL:") . " " . ticketUrl($DATA) . "\n"
+      . T_("Password:") . " " . $DATA['pass'] . "\n";
+  }
 }
